implement add activity

--- a/app/src/main/res/layout/activity_add.xml
+++ b/app/src/main/res/layout/activity_add.xml
@@ -96,8 +96,7 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="add"
-        android:id="@+id/b_add"
-        android:onClick="add" />
+        android:text="add flower"
+        android:id="@+id/b_addFlower" />
 
 </LinearLayout>
