--- a/app/src/main/res/layout/activity_modify.xml
+++ b/app/src/main/res/layout/activity_modify.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:paddingBottom="16dp"
     android:paddingLeft="16dp"
     android:paddingRight="16dp"
@@ -12,33 +13,17 @@
     android:orientation="vertical">
 
     <LinearLayout
-        android:orientation="horizontal"
+        android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <TextView
-            android:id="@+id/flower_name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            />
-
-    </LinearLayout>
-
-
-    <LinearLayout
-        android:orientation="horizontal"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Picture " />
-
-        <EditText
+        <ImageView
+            android:id="@+id/flower_picture"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/ed_picture"/>
+            android:minWidth="200dp"
+            android:minHeight="200dp"
+            app:srcCompat="@android:drawable/ic_input_add" />
     </LinearLayout>
 
     <LinearLayout
@@ -49,12 +34,12 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Period " />
+            android:text="Name " />
 
         <EditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/ed_period"/>
+            android:id="@+id/ed_name"/>
     </LinearLayout>
 
     <LinearLayout
@@ -65,14 +50,13 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="NextWatering " />
+            android:text="Latin Name " />
 
         <EditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/ed_nextWatering" />
+            android:id="@+id/ed_latin_name"/>
     </LinearLayout>
-
 
     <LinearLayout
         android:orientation="horizontal"
@@ -87,8 +71,24 @@
         <EditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/ed_frequency"
-            android:inputType="number"/>
+            android:id="@+id/ed_frequency" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Nutriment frequency " />
+
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/ed_nutriment_frequency"
+            android:inputType="number" />
     </LinearLayout>
 
     <LinearLayout
