--- a/app/src/main/res/layout/activity_recherche.xml
+++ b/app/src/main/res/layout/activity_recherche.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".RechercheActivity">
+    tools:context=".ResearchActivity">
 
     <EditText
         android:id="@+id/recherche_flower"
