--- a/app/src/main/res/layout/item_recall_layout.xml
+++ b/app/src/main/res/layout/item_recall_layout.xml
@@ -2,7 +2,7 @@
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/cardView"
+    android:id="@+id/cardViewRecall"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:clickable="true"
@@ -19,16 +19,21 @@
         android:paddingTop="8dp"
         android:paddingBottom="4dp">
 
+        <ImageView
+            android:id="@+id/flower_picture"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            app:srcCompat="@drawable/ic_launcher_foreground" />
+
         <TextView
             android:id="@+id/name"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:tag="name"
             android:paddingStart="10dp"
-            />
+            android:tag="name" />
 
     </LinearLayout>
-
 
 </androidx.cardview.widget.CardView>
