--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,9 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <color name="light_green">#78D4A8</color>
+    <color name="dark_green">#73B07D</color>
+    <color name="button_color">#659DD1</color>
+
 </resources>
