Create Research Page Layout

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,34 +15,37 @@
         android:background="@drawable/light_green_box"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent" />
-
-    <Button
-        android:id="@+id/recallbutton"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:layout_marginHorizontal="20dp"
-        android:layout_marginBottom="10dp"
-        android:layout_weight="1"
-        android:background="@drawable/button_style"
-        android:elevation="10dp"
-        android:text="Recall"
-        android:textColor="@color/white"
-        app:backgroundTint="@color/button_color"
-        app:layout_constraintBottom_toTopOf="@+id/recherchebutton"
-        app:layout_constraintEnd_toEndOf="@+id/recherchebutton"
-        app:layout_constraintStart_toStartOf="@+id/recherchebutton" />
 
     <Button
         android:id="@+id/recherchebutton"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
+        android:layout_height="40dp"
         android:layout_marginHorizontal="20dp"
-        android:layout_marginBottom="30dp"
+        android:layout_marginBottom="8dp"
         android:layout_weight="1"
-        android:background="@drawable/button_style"
+        android:background="@drawable/roundbox"
         android:elevation="10dp"
         android:text="Recherche"
+        android:textAlignment="center"
+        android:textColor="@color/white"
+        app:backgroundTint="@color/button_color"
+        app:layout_constraintBottom_toTopOf="@+id/recallbutton"
+        app:layout_constraintEnd_toEndOf="@+id/recallbutton"
+        app:layout_constraintStart_toStartOf="@+id/recallbutton" />
+
+    <Button
+        android:id="@+id/recallbutton"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:layout_marginHorizontal="20dp"
+        android:layout_marginBottom="32dp"
+        android:layout_weight="1"
+        android:background="@drawable/roundbox"
+        android:elevation="10dp"
+        android:text="Recall"
+        android:textAlignment="center"
         android:textColor="@color/white"
         app:backgroundTint="@color/button_color"
         app:layout_constraintBottom_toBottomOf="parent"
