--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,9 +4,16 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/background"
-    android:scaleType="centerCrop"
     tools:context=".MainActivity">
+
+    <ImageView
+        android:id="@+id/background_flower"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginBottom="50dp"
+        android:scaleType="centerCrop"
+        android:src="@drawable/background"
+        app:layout_constraintBottom_toBottomOf="parent" />
 
     <View
         android:id="@+id/view"
@@ -21,7 +28,7 @@
     <Button
         android:id="@+id/recherchebutton"
         android:layout_width="match_parent"
-        android:layout_height="40dp"
+        android:layout_height="48dp"
         android:layout_marginHorizontal="20dp"
         android:layout_marginBottom="8dp"
         android:layout_weight="1"
@@ -38,7 +45,7 @@
     <Button
         android:id="@+id/recallbutton"
         android:layout_width="match_parent"
-        android:layout_height="40dp"
+        android:layout_height="48dp"
         android:layout_marginHorizontal="20dp"
         android:layout_marginBottom="32dp"
         android:layout_weight="1"
