--- a/app/src/main/res/layout/activity_research.xml
+++ b/app/src/main/res/layout/activity_research.xml
@@ -13,6 +13,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
         android:hint="rechercheFlower"
+        android:minHeight="48dp"
         app:layout_constraintTop_toBottomOf="@+id/textView2"
         tools:layout_editor_absoluteX="0dp" />
 
@@ -44,7 +45,7 @@
     <Button
         android:id="@+id/button_add"
         android:layout_width="match_parent"
-        android:layout_height="40dp"
+        android:layout_height="48dp"
         android:layout_marginHorizontal="16dp"
         android:layout_marginBottom="16dp"
         android:background="@drawable/roundbox"
