--- a/app/src/main/res/layout/activity_research.xml
+++ b/app/src/main/res/layout/activity_research.xml
@@ -10,10 +10,11 @@
     <EditText
         android:id="@+id/recherche_flower"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="32dp"
         android:layout_marginTop="32dp"
-        android:hint="rechercheFlower"
-        android:minHeight="48dp"
+        android:background="@drawable/white_box"
+        android:layout_marginHorizontal="16dp"
+        android:textColor="@color/black"
         app:layout_constraintTop_toBottomOf="@+id/textView2"
         tools:layout_editor_absoluteX="0dp" />
 
@@ -56,5 +57,15 @@
         app:backgroundTint="@color/button_color"
         app:layout_constraintBottom_toBottomOf="parent"
         tools:layout_editor_absoluteX="8dp" />
+
+    <ImageView
+        android:id="@+id/imageView2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        app:layout_constraintBottom_toBottomOf="@+id/recherche_flower"
+        app:layout_constraintEnd_toEndOf="@+id/recherche_flower"
+        app:layout_constraintTop_toTopOf="@+id/recherche_flower"
+        app:srcCompat="@drawable/search" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
