--- a/app/src/main/res/layout/item_research_layout.xml
+++ b/app/src/main/res/layout/item_research_layout.xml
@@ -28,7 +28,7 @@
             app:layout_constraintDimensionRatio="1:1"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/ic_launcher_foreground" />
+            app:srcCompat="@drawable/flower" />
 
         <TextView
             android:id="@+id/name"
