--- a/app/src/main/res/layout/activity_research.xml
+++ b/app/src/main/res/layout/activity_research.xml
@@ -7,6 +7,29 @@
     android:background="@color/light_green"
     tools:context=".ResearchActivity">
 
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:layout_marginHorizontal="16dp"
+        android:background="@color/white"
+        android:elevation="4dp"
+        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/your_flower"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="32dp"
+        android:gravity="center_horizontal"
+        android:text="Your flower"
+        android:textSize="20sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/toolbar" />
+
     <EditText
         android:id="@+id/recherche_flower"
         android:layout_width="match_parent"
@@ -15,19 +38,22 @@
         android:background="@drawable/white_box"
         android:layout_marginHorizontal="16dp"
         android:textColor="@color/black"
-        app:layout_constraintTop_toBottomOf="@+id/textView2"
+        android:maxLines="1"
+        android:inputType="text"
+        android:paddingLeft="10dp"
+        android:paddingRight="50dp"
+        app:layout_constraintTop_toBottomOf="@+id/your_flower"
         tools:layout_editor_absoluteX="0dp" />
 
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="match_parent"
+    <ImageView
+        android:id="@+id/search_icon"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:gravity="center_horizontal"
-        android:text="fleur"
-        android:textSize="20sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_marginEnd="12dp"
+        app:layout_constraintBottom_toBottomOf="@+id/recherche_flower"
+        app:layout_constraintEnd_toEndOf="@+id/recherche_flower"
+        app:layout_constraintTop_toTopOf="@+id/recherche_flower"
+        app:srcCompat="@drawable/search" />
 
 
     <androidx.recyclerview.widget.RecyclerView
@@ -58,14 +84,5 @@
         app:layout_constraintBottom_toBottomOf="parent"
         tools:layout_editor_absoluteX="8dp" />
 
-    <ImageView
-        android:id="@+id/imageView2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        app:layout_constraintBottom_toBottomOf="@+id/recherche_flower"
-        app:layout_constraintEnd_toEndOf="@+id/recherche_flower"
-        app:layout_constraintTop_toTopOf="@+id/recherche_flower"
-        app:srcCompat="@drawable/search" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
