--- a/app/src/main/res/layout/activity_add.xml
+++ b/app/src/main/res/layout/activity_add.xml
@@ -1,100 +1,235 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="16dp"
-    android:paddingLeft="16dp"
-    android:paddingRight="16dp"
-    android:paddingTop="16dp"
-    tools:context=".AddActivity"
-    android:orientation="vertical">
+    android:background="@color/light_green"
+    tools:context=".ResearchActivity">
 
-    <LinearLayout
-        android:orientation="vertical"
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolbar"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="16dp"
+        android:layout_marginTop="8dp"
+        android:background="@color/white"
+        android:elevation="4dp"
+        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
+        app:layout_constraintTop_toTopOf="parent" />
 
-        <ImageView
-            android:id="@+id/flower_picture"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:minWidth="200dp"
-            android:minHeight="200dp"
-            app:srcCompat="@android:drawable/ic_input_add" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:orientation="horizontal"
+    <ImageView
+        android:id="@+id/flower_picture"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="0dp"
+        android:layout_marginHorizontal="70dp"
+        android:layout_marginTop="12dp"
+        android:background="@color/white"
+        app:layout_constraintDimensionRatio="1:1"
+        app:layout_constraintTop_toBottomOf="@+id/toolbar" />
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Name " />
-
-        <EditText
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/ed_name"/>
-    </LinearLayout>
-
-    <LinearLayout
-        android:orientation="horizontal"
+    <View
+        android:id="@+id/square"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="0dp"
+        android:layout_margin="16dp"
+        android:background="@drawable/dark_green_box"
+        app:layout_constraintBottom_toTopOf="@+id/b_addFlower"
+        app:layout_constraintTop_toBottomOf="@+id/flower_picture"
+        app:layout_constraintVertical_bias="0.0"
+        tools:layout_editor_absoluteX="54dp" />
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Latin Name " />
-
-        <EditText
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/ed_latin_name"/>
-    </LinearLayout>
-
-    <LinearLayout
-        android:orientation="horizontal"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Frequency " />
-
-        <EditText
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/ed_frequency" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:orientation="horizontal"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Nutriment frequency " />
-
-        <EditText
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/ed_nutriment_frequency"
-            android:inputType="number" />
-    </LinearLayout>
-
-    <Button
+    <TextView
+        android:id="@+id/name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Confirm"
-        android:id="@+id/b_addFlower" />
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="8dp"
+        android:text="Name"
+        android:textColor="@color/white"
+        app:layout_constraintStart_toStartOf="@+id/square"
+        app:layout_constraintTop_toTopOf="@+id/square" />
 
-</LinearLayout>
+    <EditText
+        android:id="@+id/ed_name"
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="16dp"
+        android:background="@drawable/white_box"
+        app:layout_constraintBottom_toBottomOf="@+id/name"
+        app:layout_constraintEnd_toEndOf="@+id/square"
+        app:layout_constraintTop_toTopOf="@+id/name" />
+
+    <TextView
+        android:id="@+id/latin_name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="12dp"
+        android:text="Latin Name"
+        android:textColor="@color/white"
+        app:layout_constraintStart_toStartOf="@+id/name"
+        app:layout_constraintTop_toBottomOf="@+id/name" />
+
+    <EditText
+        android:id="@+id/ed_latin_name"
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
+        android:background="@drawable/white_box"
+        app:layout_constraintBottom_toBottomOf="@+id/latin_name"
+
+        app:layout_constraintEnd_toEndOf="@+id/ed_name"
+        app:layout_constraintHorizontal_bias="0.0"
+
+        app:layout_constraintStart_toStartOf="@+id/ed_name"
+        app:layout_constraintTop_toTopOf="@+id/latin_name" />
+
+    <TextView
+        android:id="@+id/nutriment_frequency"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="12dp"
+        android:text="Nutriment"
+        android:textColor="@color/white"
+        app:layout_constraintStart_toStartOf="@+id/latin_name"
+        app:layout_constraintTop_toBottomOf="@+id/latin_name" />
+
+    <EditText
+        android:id="@+id/ed_nutriment_frequency"
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
+        android:background="@drawable/white_box"
+        app:layout_constraintBottom_toBottomOf="@+id/nutriment_frequency"
+        app:layout_constraintEnd_toEndOf="@+id/ed_latin_name"
+        app:layout_constraintStart_toStartOf="@+id/ed_latin_name"
+        app:layout_constraintTop_toTopOf="@+id/nutriment_frequency" />
+
+    <TextView
+        android:id="@+id/frequency"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:text="Frequency"
+        android:textColor="@color/white"
+        app:layout_constraintStart_toStartOf="@+id/nutriment_frequency"
+        app:layout_constraintTop_toBottomOf="@+id/nutriment_frequency" />
+
+
+    <TextView
+        android:id="@+id/spring"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+
+        android:text="Spring"
+        android:textColor="@color/white"
+        android:textSize="12dp"
+        app:layout_constraintEnd_toStartOf="@+id/summer"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintHorizontal_chainStyle="spread"
+        app:layout_constraintStart_toStartOf="@+id/square"
+        app:layout_constraintTop_toBottomOf="@+id/frequency" />
+
+
+    <TextView
+        android:id="@+id/winter"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Winter"
+        android:textColor="@color/white"
+        android:textSize="12dp"
+
+        app:layout_constraintEnd_toEndOf="@+id/square"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/autumn"
+        app:layout_constraintTop_toTopOf="@+id/autumn" />
+
+    <TextView
+        android:id="@+id/autumn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Autumn"
+        android:textColor="@color/white"
+        android:textSize="12dp"
+
+        app:layout_constraintEnd_toStartOf="@+id/winter"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/summer"
+        app:layout_constraintTop_toTopOf="@+id/summer" />
+
+    <TextView
+        android:id="@+id/summer"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Summer"
+        android:textColor="@color/white"
+
+        android:textSize="12dp"
+        app:layout_constraintEnd_toStartOf="@+id/autumn"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/spring"
+        app:layout_constraintTop_toTopOf="@+id/spring" />
+
+    <!-- The next edit is spring -->
+    <EditText
+        android:id="@+id/ed_frequency"
+        android:layout_width="50dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:background="@drawable/white_box"
+        android:inputType="number"
+        app:layout_constraintEnd_toEndOf="@+id/spring"
+        app:layout_constraintStart_toStartOf="@+id/spring"
+        app:layout_constraintTop_toBottomOf="@+id/spring" />
+
+    <EditText
+        android:id="@+id/ed_summer"
+        android:layout_width="50dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:background="@drawable/white_box"
+        android:inputType="number"
+        app:layout_constraintEnd_toEndOf="@+id/summer"
+        app:layout_constraintStart_toStartOf="@+id/summer"
+        app:layout_constraintTop_toBottomOf="@+id/summer" />
+
+    <EditText
+        android:id="@+id/ed_autumn"
+        android:layout_width="50dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:background="@drawable/white_box"
+        android:inputType="number"
+        app:layout_constraintEnd_toEndOf="@+id/autumn"
+        app:layout_constraintStart_toStartOf="@+id/autumn"
+        app:layout_constraintTop_toBottomOf="@+id/autumn" />
+
+    <EditText
+        android:id="@+id/ed_winter"
+        android:layout_width="50dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:background="@drawable/white_box"
+        android:inputType="number"
+        app:layout_constraintEnd_toEndOf="@+id/winter"
+        app:layout_constraintStart_toStartOf="@+id/winter"
+        app:layout_constraintTop_toBottomOf="@+id/winter" />
+
+    <Button
+        android:id="@+id/b_addFlower"
+        android:layout_width="200dp"
+        android:layout_height="48dp"
+        android:layout_marginHorizontal="20dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="16dp"
+        android:layout_weight="1"
+        android:background="@drawable/roundbox"
+        android:elevation="10dp"
+        android:text="CONFIRMER"
+        android:textAlignment="center"
+        android:textColor="@color/white"
+        app:backgroundTint="@color/button_color"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+
+
+</androidx.constraintlayout.widget.ConstraintLayout>
