--- a/app/src/main/res/layout/item_research_layout.xml
+++ b/app/src/main/res/layout/item_research_layout.xml
@@ -23,6 +23,7 @@
             android:layout_height="125dp"
             android:layout_weight="1"
             android:scaleType="centerCrop"
+            android:padding="8dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintDimensionRatio="1:1"
             app:layout_constraintStart_toStartOf="parent"
