--- a/app/src/main/res/layout/activity_modify.xml
+++ b/app/src/main/res/layout/activity_modify.xml
@@ -130,7 +130,7 @@
         android:text="Spring"
         android:textColor="@color/white"
         android:textSize="12dp"
-        app:layout_constraintBottom_toTopOf="@+id/ed_frequency"
+        app:layout_constraintBottom_toTopOf="@+id/ed_spring"
         app:layout_constraintEnd_toStartOf="@+id/summer"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintHorizontal_chainStyle="spread"
@@ -179,7 +179,7 @@
 
     <!-- The next edit is spring -->
     <EditText
-        android:id="@+id/ed_frequency"
+        android:id="@+id/ed_spring"
         android:layout_width="50dp"
         android:layout_height="wrap_content"
         android:background="@drawable/white_box"
@@ -202,7 +202,7 @@
         android:paddingHorizontal="10dp"
         app:layout_constraintEnd_toEndOf="@+id/summer"
         app:layout_constraintStart_toStartOf="@+id/summer"
-        app:layout_constraintTop_toTopOf="@+id/ed_frequency" />
+        app:layout_constraintTop_toTopOf="@+id/ed_spring" />
 
     <EditText
         android:id="@+id/ed_autumn"
