--- a/app/src/main/res/layout/item_recall_layout.xml
+++ b/app/src/main/res/layout/item_recall_layout.xml
@@ -7,7 +7,7 @@
     android:layout_height="wrap_content"
     android:clickable="true"
     android:focusable="true"
-    android:backgroundTint="@color/white"
+    android:backgroundTint="@color/light_blue"
     android:layout_margin="10dp"
     app:cardCornerRadius="12dp"
     app:cardElevation="10dp">
@@ -16,6 +16,19 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
+
+        <TextView
+            android:id="@+id/nutriment"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="28dp"
+            android:text=""
+            android:textAlignment="center"
+            android:textColor="@color/red"
+            android:textSize="12dp"
+            app:layout_constraintEnd_toEndOf="@+id/name"
+            app:layout_constraintStart_toStartOf="@+id/name"
+            app:layout_constraintTop_toBottomOf="@+id/name" />
 
         <ImageView
             android:id="@+id/flower_picture"
