--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -26,14 +26,14 @@
         app:layout_constraintStart_toStartOf="parent" />
 
     <Button
-        android:id="@+id/recherchebutton"
+        android:id="@+id/research_button"
         android:layout_width="150dp"
         android:layout_height="48dp"
         android:layout_marginHorizontal="20dp"
         android:layout_weight="1"
         android:background="@drawable/roundbox"
         android:elevation="10dp"
-        android:text="Recherche"
+        android:text="Research"
         android:textAlignment="center"
         android:textColor="@color/white"
         app:backgroundTint="@color/button_color"
@@ -42,7 +42,7 @@
         app:layout_constraintTop_toTopOf="@+id/welcome_message" />
 
     <Button
-        android:id="@+id/recallbutton"
+        android:id="@+id/recall_button"
         android:layout_width="150dp"
         android:layout_height="48dp"
         android:layout_marginHorizontal="20dp"
