--- a/app/src/main/res/layout/activity_add.xml
+++ b/app/src/main/res/layout/activity_add.xml
@@ -59,6 +59,8 @@
         android:layout_marginEnd="16dp"
         android:background="@drawable/white_box"
         android:paddingHorizontal="10dp"
+        android:inputType="text"
+        android:maxLines="1"
         app:layout_constraintBottom_toBottomOf="@+id/name"
         app:layout_constraintEnd_toEndOf="@+id/square"
         app:layout_constraintTop_toTopOf="@+id/name" />
@@ -79,11 +81,11 @@
         android:layout_height="wrap_content"
         android:background="@drawable/white_box"
         android:paddingHorizontal="10dp"
+        android:inputType="text"
+        android:maxLines="1"
         app:layout_constraintBottom_toBottomOf="@+id/latin_name"
-
         app:layout_constraintEnd_toEndOf="@+id/ed_name"
         app:layout_constraintHorizontal_bias="0.0"
-
         app:layout_constraintStart_toStartOf="@+id/ed_name"
         app:layout_constraintTop_toTopOf="@+id/latin_name" />
 
@@ -231,7 +233,7 @@
         android:layout_weight="1"
         android:background="@drawable/roundbox"
         android:elevation="10dp"
-        android:text="CONFIRMER"
+        android:text="CONFIRM"
         android:textAlignment="center"
         android:textColor="@color/white"
         app:backgroundTint="@color/button_color"
