--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,7 +26,7 @@
         app:layout_constraintStart_toStartOf="parent" />
 
     <Button
-        android:id="@+id/recherchebutton"
+        android:id="@+id/research_button"
         android:layout_width="match_parent"
         android:layout_height="48dp"
         android:layout_marginHorizontal="20dp"
@@ -34,16 +34,16 @@
         android:layout_weight="1"
         android:background="@drawable/roundbox"
         android:elevation="10dp"
-        android:text="Recherche"
+        android:text="Research"
         android:textAlignment="center"
         android:textColor="@color/white"
         app:backgroundTint="@color/button_color"
-        app:layout_constraintBottom_toTopOf="@+id/recallbutton"
-        app:layout_constraintEnd_toEndOf="@+id/recallbutton"
-        app:layout_constraintStart_toStartOf="@+id/recallbutton" />
+        app:layout_constraintBottom_toTopOf="@+id/recall_button"
+        app:layout_constraintEnd_toEndOf="@+id/recall_button"
+        app:layout_constraintStart_toStartOf="@+id/recall_button" />
 
     <Button
-        android:id="@+id/recallbutton"
+        android:id="@+id/recall_button"
         android:layout_width="match_parent"
         android:layout_height="48dp"
         android:layout_marginHorizontal="20dp"
@@ -67,9 +67,9 @@
         android:textAlignment="center"
         android:textColor="@color/white"
         android:textSize="30dp"
-        app:layout_constraintBottom_toTopOf="@+id/recallbutton"
-        app:layout_constraintEnd_toEndOf="@+id/recallbutton"
-        app:layout_constraintStart_toStartOf="@+id/recallbutton"
+        app:layout_constraintBottom_toTopOf="@+id/recall_button"
+        app:layout_constraintEnd_toEndOf="@+id/recall_button"
+        app:layout_constraintStart_toStartOf="@+id/recall_button"
         app:layout_constraintTop_toTopOf="@+id/view"
         app:layout_constraintVertical_bias="0.3" />
 
